# hte-resonance-observatory

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
docs/: AKASHIC_COHERENCE_LEDGER_V0.2.md  CLAIM_BOUNDARIES.md  MVP_BUILD_PLAN.md  SONIFICATION_SPEC.md  architecture.md  calibration-layer.md  materials-atlas-entry.md  roadmap.md
examples/materials/: quartz-ledger.json
src/hte_observatory/: __init__.py  api.py  elements.py  formula.py  harmonic.py  ledger.py
tests/: test_hte_core.py
web/: index.html
